# voxseq

./: LICENSE  README  builder  voxseq.cabal
python/: py.py
src/: Analyze.hs  Convert.hs  FFT.hs  Input.hs  Main.hs  MathStuff.hs  Midi.hs  Test.hs  midi.hs
src/Atran/: Analyze.hs  FFT.hs  Input.hs  MathStuff.hs  Midi.hs  Monobit.hs
