Name:               voxseq
Version:            0.0
Description:        nothing
License:            OtherLicense 
License-file:       LICENSE
Author:             Jeffrey Thornton
Maintainer:         none
Build-Type:         Simple
Cabal-Version:      >=1.2

Executable voxseq
    Main-is:        midi.hs
    hs-source-dirs: src
    Build-Depends:  base >= 3,
                    haskell98,
                    pure-fft,
                    WAVE,
                    midi,
                    transformers,
                    utility-ht,
                    bytestring,
                    event-list,
                    split
