Name:                voxseq
Version:             0.1
Description:         Some day it may become an audio sequencer app that eschews keyboard input in favor of vocal input.
Homepage:            https://github.com/jeffrey-/voxseq
License:             AllRightsReserved
License-file:        LICENSE
Author:              Jeffrey Thornton
Category:            Sound
Build-type:          Simple
Cabal-version:       >=1.2

Executable voxseq
    Main-is:        Main.hs
    hs-source-dirs: src
    Build-Depends:  base >= 3,
                    haskell98,
                    pure-fft,
                    WAVE,
                    midi,
                    transformers,
                    utility-ht,
                    bytestring,
                    event-list,
                    split
